snippets/Nemerle.Statechart/Tests/testsuite/positive/join_transition.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  flags testing auto_initial;
  //flags debug;
  
  name "join transition";
  
  state A
  {
    a => B;
  }

  region B
  {
    (C, F): a => A;
    
    state C
    {
      b => E;
    }
    
    state E
    {
      b => C;
    }
    
  } and
  {
    
    state D
    {
      a => F;
    }
    
    state F
    {
      b => D;
    }
  }
  
  #>)]
  public class example
  {
  }

  module Test
  {
    Main() : void
    {
      def fsm = example();
      def tester = fsm.GetTester();
      tester.ConsoleTestInit();
      tester.Initiate("A", "EntryA");
      tester.Test("a", "CD", ["A"], ["B", "C", "D"]);
      tester.Test("a", "CF", ["D"], ["F"]);
      tester.Test("a", ["F", "C", "B"], ["A"]);
      tester.Test("a", "CD", ["A"], ["B", "C", "D"]);
      tester.Test("b", "ED", ["C"], ["E"]);
      tester.Test("a", "EF", ["D"], ["F"]);
      fsm.Terminate();
    }
  }
  
 /*
BEGIN-OUTPUT
EntryA
[A]
Ok
Processing a 'a' 
ExitA
EntryB
EntryC
EntryD
[CD]
Ok
Processing a 'a' 
ExitD
EntryF
[CF]
Ok
Processing a 'a' 
ExitF
ExitC
ExitB
EntryA
[A]
Ok
Processing a 'a' 
ExitA
EntryB
EntryC
EntryD
[CD]
Ok
Processing a 'b' 
ExitC
EntryE
[ED]
Ok
Processing a 'a' 
ExitD
EntryF
[EF]
Ok
END-OUTPUT
*/
