snippets/Nemerle.Statechart/Tests/testsuite/negative/fork_transition_error.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  flags testing;
  //flags debug;
  
  name "fork transition error";
  
  state A
  {
    a => C, D;    // E: Transition originated from fork pseudostate "TransitionAToForkTopToC_DBya" must target state in different concurrent sub regions of same region
    b => C, G;    // E: Transition originated from fork pseudostate "TransitionAToForkTopToC_GByb" must target state in different concurrent sub regions of same region
    c => E, B.j1; // E: Transition originated from fork pseudostate "TransitionAToForkTopToE_j1AtBByc" must target state in different concurrent sub regions of same region
  }
    
  region B
  {
    junction j1
    {
      a1   => C;
      else => D;
    }
    
    state C
    {
    }
    
    state D
    {
    }
    
  } and
  {
    state E
    {
    }
    
    state F
    {
    }
  }
  
  state G
  {
  }
  
  #>)]
  public class example
  {
  }
